# Suitkaise

./: .gitignore  0-4-0-beta-release-task-list.md  0-4-2-beta-release-task-list.md  0-4-7-beta-release-task-list.md  CHANGELOG.md  DELETE_OLD_PROGRESS_BAR_FILES.md  LICENSE  LICENSE.APACHE  LICENSE.GPL  README.md  debug_test.py  index.html  pyproject.toml  pyrightconfig.json  run_tests.py  setup.cfg  sitecustomize.py  test_simple_animation.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
.sk/: gs_Suitkaise_top_474b88.sk  gs_Suitkaise_top_474b88.sk.backup
.venv312/: pyvenv.cfg
_suitkaise_wip/fileconv/: concept.md
_suitkaise_wip/matrix/: matrix.py
app/: main.py  scan.py  starting_over.md
configs/: production.json
docs/: __init__.py  instructions.md  overall.md  revamped_sk.md
docs/cerial/: concept.md  instructions.md  todo.md
docs/circuit/: concept.md  example.md  example.py  todo.md
docs/event_system/: event_system.md  how_to_use.md
docs/fdl/: concept.md  example.md  example.py  info.md  table_concept_final.md  todo.md
docs/processing/: concept.md  info.md
docs/skfunction/: concept.md  example.md  example.py  info.md
docs/skpath/: concept.md  example.md  example.py  info.md  skpath_concept.md  todo.md
docs/sktest/: concept.md
docs/sktime/: concept.md  example.md  example.py  info.md  quiz_questions.md  todo.md
docs/xprocess/: concept.md  example.md  example.py  info.md  todo.md
examples/: __init__.py  example1.py
int-docs/: cerial-improvements.md  improvements.md  overall.md  skpath-improvements.md  sktime-improvements.md
int-docs/fdl/: concept.md  info.md  todo.md
int-docs/skfunction/: concept.md  todo.md
int-docs/skpath/: concept.md  info.md  todo.md
pages/: about.html  circuits-learn.html  circuits-quick-start.html  circuits-videos.html  circuits-why.html  circuits.html  cucumber-learn.html  cucumber-performance.html  cucumber-supported-types.html  cucumber-videos.html  cucumber-worst-possible-object.html  cucumber.html  feedback.html  paths-examples.html  paths-learn.html  paths-quick-start.html  paths-videos.html  processing-examples.html  processing-how-it-works.html  processing-quick-start.html  processing-videos.html  processing-why.html  sk-how-it-works.html  sk-videos.html  sk-why.html  timing-examples.html  timing-how-it-works.html  timing-videos.html  timing.html
pages/showcases/: cucumber-1.html  cucumber-2.html  cucumber1.md  paths-1.html  processing-1.html  sk-1.html
site/: TODO.md  fixes.md  index.html  instructions.md
site/__code__/: index.html  robots.txt  script.js  sitemap.xml  styles.css
site/about/: __about__.md
site/cerial/: cerial-bar.md  cerial-examples.md  cerial-how-it-works.md  cerial-how-to-use.md  cerial-learn.md  cerial-supported-types.md  cerial-tests.md  cerial-videos.md  cerial-why.md
site/circuit/: circuit-how-it-works.md  circuit-how-to-use.md  circuit-videos.md  circuit-why.md  circuits-bar.md  circuits-examples.md  circuits-how-it-works.md  circuits-how-to-use.md  circuits-quick-start.md  circuits-tests.md  circuits-why.md
site/cucumber/: cucumber-bar.md  cucumber-examples.md  cucumber-how-it-works.md  cucumber-how-to-use.md  cucumber-learn.md  cucumber-performance.md  cucumber-quick-start.md  cucumber-supported-types.md  cucumber-tests.md  cucumber-videos.md  cucumber-why.md  cucumber-worst-possible-object.md
site/donate/: __donate__.md
site/error/: __error__.md
site/feedback/: _survey_links.md
site/home/: __home__.md
site/loading/: __loading__.md
site/password/: __password__.md
site/paths/: paths-bar.md  paths-examples.md  paths-how-it-works.md  paths-how-to-use.md  paths-quick-start.md  paths-skpath.md  paths-tests.md  paths-why.md
site/processing/: processing-bar.md  processing-examples.md  processing-how-it-works.md  processing-how-to-use.md  processing-quick-start.md  processing-skprocess.md  processing-tests.md  processing-videos.md  processing-why.md
site/quick start/: __quick_start__.md
site/sk/: sk-bar.md  sk-blocking-calls.md  sk-examples.md  sk-how-it-works.md  sk-how-to-use.md  sk-quick-start.md  sk-tests.md  sk-videos.md  sk-why.md
site/skpath/: skpath-examples.md  skpath-how-it-works.md  skpath-how-to-use.md  skpath-videos.md  skpath-why.md
site/sktime/: sktime-bar.md  sktime-examples.md  sktime-how-it-works.md  sktime-how-to-use.md  sktime-tests.md  sktime-why.md
site/technical info/: __technical_info__.md
site/timing/: timing-bar.md  timing-examples.md  timing-how-it-works.md  timing-how-to-use.md  timing-learn.md  timing-quick-start.md  timing-tests.md  timing-timers.md  timing-videos.md  timing-why.md
suitkaise/: DESIGN.md  __init__.py  __init__.pyi  _welcome.py  cli.py  concepts.py  concepts2.md  docs.py  implementation.md  main.py  requirements.md  revamped_sk.md  rich_demo.py  scan.py
suitkaise-examples/pokerML/: README.md  concept.md  run_demo.py
suitkaise/_int/: __init__.py
suitkaise024/: __init__.py  docs.py
suitkaise_depr/: __init__.py
tests/: _failure_registry.py  conftest.py  run_all.py  run_all_benchmarks.py  run_all_tests.py  test_pytest_mirror.py  windows_failures.md
(+1014 files in other folders)
