[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suitkaise"
version = "0.4.2b0"
description = "Making things easier for developers of all skill levels to develop complex applications."
authors = [
    {name = "Casey Eddings", email = "suitkaise@suitkaise.info"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "serialization",
    "pickle",
    "time",
    "timing",
    "paths",
    "path-operations",
    "circuit-breaker",
    "developer-tools",
    "utilities"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/caseyeddings/suitkaise"
"Bug Tracker" = "https://github.com/caseyeddings/suitkaise/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["suitkaise*"]
exclude = ["tests*", "docs*", "examples*", "suitkaise_depr*", "_suitkaise_wip*"]

[tool.setuptools.package-data]
"*" = ["**/*.md", "**/*.pyi", "py.typed"]

[project.scripts]
suitkaise = "suitkaise.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "basic: SKTime basic function tests",
    "yawn: SKTime Yawn behavior tests",
    "timer: SKTime Timer tests",
    "timethis: SKTime timethis decorator tests",
    "concurrent: concurrency/thread/process tests",
    "benchmark: performance/throughput tests",
]
testpaths = ["tests"]

[tool.pyright]
include = ["suitkaise"]
exclude = ["suitkaise_depr", "_suitkaise_wip", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
