[metadata]
name = suitkaise
version = 0.1.0
description = Development assistance, code visualization, and more.
author = Casey Eddings
author_email = caseyeddings@gmail.com
license = Apache-2.0, GNU GPLv3
license_files = 
    LICENSE.APACHE
    LICENSE.GPL

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
include = suitkaise*