[metadata]
name = suitkaise
version = 0.4.7b0
description = Making things easier for developers of all skill levels to develop complex applications.
author = Casey Eddings
author_email = suitkaise@suitkaise.info
license = Apache-2.0
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
include = suitkaise*

[tool:pytest]
markers =
    basic: SKTime basic function tests
    yawn: SKTime Yawn behavior tests
    timer: SKTime Timer tests
    timethis: SKTime timethis decorator tests
    concurrent: concurrency/thread/process tests
    benchmark: performance/throughput tests